@@ -1,6 +1,6 @@
 Package: RProtoBuf
-Version: 0.4.10
-Date: 2017-08-13
+Version: 0.4.10.1
+Date: 2017-08-14
 Author: Romain Francois, Dirk Eddelbuettel, Murray Stokely and Jeroen Ooms
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Title: R Interface to the 'Protocol Buffers' 'API' (Version 2 or 3)
